Functions to plot the diagram